# altimateai

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  commands.sh  docker-compose.yml  pyproject.toml
scripts/: sandbox_init.py
src/: config.py  main.py
src/agents/: agents.py  utils.py
src/agents/prompts/: backend.py  contract.py  frontend.py  manager.py  reviewer.py  ui_designer.py
src/tools/: file_writer.py  pdf_reader.py  screenshot.py
tests/: test_main.py
